[package]
name = "wolf3d-clone-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
ndarray = "0.15.6"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["image", "unsafe_textures"]