[package]
name = "wolf3d-reimpl-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.2.2"
ndarray = "0.15.6"
rand = "0.8.5"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["image", "unsafe_textures"]

# For bundling into a macOS .app (cargo bundle --release)
[package.metadata.bundle]
name = "wolf3d-reimpl-rs"
identifier = "com.e6quisitory.wolf3d"
icon = ["assets/icon.png"]
version = "0.1.0"
resources = ["assets"]
